force-app/main/default/objects/Player__c/fields/Loadout__c.field-meta.xml
<CustomField>
    <fullName>Loadout__c</fullName>
    <description>The JSON representing the player loadout (weapons, materials, etc.)</description>
    <label>Loadout</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>