force-app/main/default/objects/Player__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Current location of the player</description>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>