force-app/main/default/objects/Player__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>The platform name in human readable form</description>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Xbox One</fullName>
            </value>
            <value>
                <fullName>PlayStation 4</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>