force-app/main/default/objects/Player__c/fields/Player_Data__c.field-meta.xml
<CustomField>
    <fullName>Player_Data__c</fullName>
    <description>The JSON player data retrieve from an API</description>
    <label>Player Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>