force-app/main/default/objects/Player__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <description>The Epic Games player UID</description>
    <label>UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>