force-app/main/default/objects/Player__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>eadx__Location__Latitude__s</columns>
    <columns>eadx__Location__Longitude__s</columns>
    <columns>UID__c</columns>
    <columns>Loadout__c</columns>
    <columns>Player_Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>